scripts/slurm/jobname_fl_jobid_169143.out
  File "/home/kwangyeongill/FedSSL_clean/main.py", line 213
    "top1_server": top1_avg
    ^
SyntaxError: invalid syntax
